--- a/app.json
+++ b/app.json
@@ -68,7 +68,8 @@
         }
       ],
       "expo-localization",
-      "expo-web-browser"
+      "expo-web-browser",
+      "expo-quick-actions"
     ],
     "experiments": {
       "typedRoutes": true,
