--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "expo-localization": "~17.0.8",
     "expo-media-library": "~18.2.1",
     "expo-navigation-bar": "~5.0.10",
+    "expo-quick-actions": "^6.0.0",
     "expo-router": "~6.0.17",
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
+    "expo-store-review": "~9.0.9",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
